tests/it/wire/snapshots/it__wire__bedrock__streams_text_reasoning_and_a_tool_call.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse-stream",
  "headers": [
    [
      "accept",
      "application/vnd.amazon.eventstream"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "95"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "inferenceConfig": {
      "maxTokens": 128
    },
    "messages": [
      {
        "content": [
          {
            "text": "Hello"
          }
        ],
        "role": "user"
      }
    ]
  }
}
