tests/it/wire/snapshots/it__wire__bedrock__warns_that_request_metadata_cannot_be_sent-2.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "id": null,
  "model": {
    "provider": "bedrock",
    "model": "sonnet"
  },
  "content": [
    {
      "type": "text",
      "text": "Hello."
    }
  ],
  "finish_reason": "stop",
  "usage": {
    "input": 12,
    "output": 7,
    "reasoning": 0,
    "cache_read": 0,
    "cache_write": 0
  },
  "warnings": [
    {
      "code": "unsupported_control",
      "message": "this provider protocol does not support request metadata"
    }
  ],
  "raw": {
    "output": {
      "message": {
        "content": [
          {
            "text": "Hello."
          }
        ],
        "role": "assistant"
      }
    },
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 12,
      "outputTokens": 7,
      "totalTokens": 19
    }
  }
}
