tests/it/wire/snapshots/it__wire__bedrock__warns_that_request_metadata_cannot_be_sent.snap
---
source: tests/it/wire/bedrock.rs
expression: rendered
---
{
  "body": {
    "inferenceConfig": {
      "maxTokens": 128
    },
    "messages": [
      {
        "content": [
          {
            "text": "Hello"
          }
        ],
        "role": "user"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "95"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/model/anthropic.claude-sonnet-4-6/converse"
}
